--- a/server/lib/installer/config_template.json
+++ b/server/lib/installer/config_template.json
@@ -8,12 +8,7 @@
 	"MAX_PROFILES_QUERY" : 7,
 	"MAX_PROFILES_QUERY_ONLINE" : 7,
 	"MAX_SIZE_ASIM_KEYS_BUFFER" : 100,
-	"listOfServerSockets" : {
-		"0" : {
-			"ipServerSockets"	: "127.0.0.1",
-			"portServerSockets" : "80"
-		}
-	},
+	"listOfServerSockets":[	{"ipServerSockets":"127.0.0.1","portServerSockets":"80"}],
 	"instance" : [{
         "id" : 0,
 		"db" : {
