--- a/server/.gitignore
+++ b/server/.gitignore
@@ -2,3 +2,4 @@ node_modules/
 lib/*config.json
 lib/installer/nginx.conf
 lib/installer/NUMBER_OF_INSTANCES.dat
+lib/installer/SERVER_IP_ADDRESS.dat
