--- a/server/lib/installer/nginx_template.conf
+++ b/server/lib/installer/nginx_template.conf
@@ -58,8 +58,8 @@ http {
     server {
         listen 80;
         server_name #TO_BE_REPLACED_BY_INSTALLER_HERE_server_name ;
-        location ~ ^/(img/|js/|css/|robots.txt|humans.txt|favicon.ico) {
-         root /home/node-7/visible/platforms/node/public;
+        location ~ ^/(index.html|htm/|res/|js/|css/|favicon.ico) {
+         root #TO_BE_REPLACED_BY_INSTALLER_HERE_www ;
          access_log off;
          expires max;
         }
