--- a/server/package.json
+++ b/server/package.json
@@ -30,5 +30,5 @@
   "author": 	"Marco Vereda Manchego",
   "url": 		"http://www.instaltic.com",
   "email": 		"support@instaltic.com",
-  "license": 	"GPL"
+  "license": "BSD2"
 }
