--- a/server/lib/installer/config_template.json
+++ b/server/lib/installer/config_template.json
@@ -25,8 +25,8 @@
 		"username" : "yourPayPalname",
 		"password" : "yourPayPalpass",
 		"signature" : "yourPayPalSignature",
-		"returnURL" : "http://127.0.0.1/successPayment",
-		"cancelURL" : "http://127.0.0.1/cancelPayment"
+		"returnURL" : "https://127.0.0.1/wss/successPayment",
+		"cancelURL" : "https://127.0.0.1/wss/cancelPayment"
 	},
 	"keyGCM" : "yourKeyGCM",
 	"redis" : {
