--- a/server/lib/installer/nginx_template.conf
+++ b/server/lib/installer/nginx_template.conf
@@ -55,35 +55,51 @@ http {
         ip_hash;
 #TO_BE_REPLACED_BY_INSTALLER_HERE_tls_nodes
     }
+
     server {
-        listen 80;
-        server_name #TO_BE_REPLACED_BY_INSTALLER_HERE_server_name ;
-        location ~ ^/(index.html|htm/|res/|js/|css/|favicon.ico) {
-         root #TO_BE_REPLACED_BY_INSTALLER_HERE_www ;
-         access_log off;
-         expires max;
-        }
-        location / {
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host $host;
-            proxy_http_version 1.1;
-            proxy_pass http://io_nodes;
-            proxy_set_header Access-Control-Allow-Origin $http_origin;
-        }
+        listen 80 ;
+        listen [::]:80 ;
+        server_name #TO_BE_REPLACED_BY_INSTALLER_HERE_server_name  ;
+        return 301 https://$host$request_uri;
     }
+
     server {
-        listen 443;
+        listen              443 ssl;
+        keepalive_timeout   70;
         server_name #TO_BE_REPLACED_BY_INSTALLER_HERE_server_name ;
-        location / {
+        ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
+        ssl_ciphers         AES128-SHA:AES256-SHA:RC4-SHA:DES-CBC3-SHA:RC4-MD5;
+        ssl_certificate     /etc/nginx/ssl/cert/knet.crt;
+        ssl_certificate_key /etc/nginx/ssl/private/knet.key;
+        ssl_session_cache   shared:SSL:10m;
+        ssl_session_timeout 10m;
+
+        root #TO_BE_REPLACED_BY_INSTALLER_HERE_www ;
+        index index.html;
+        
+        location /wss/ {
+
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $host;
             proxy_http_version 1.1;
-            proxy_pass http://tls_nodes;
+            proxy_pass http://io_nodes/;
             proxy_set_header Access-Control-Allow-Origin $http_origin;
+            proxy_redirect http://tls_nodes https://#TO_BE_REPLACED_BY_INSTALLER_HERE_server_name;
+
+        }
+        location /tls/  {
+
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_http_version 1.1;
+            proxy_pass http://tls_nodes/;
+            proxy_set_header Access-Control-Allow-Origin $http_origin;
+            proxy_redirect http://tls_nodes https://#TO_BE_REPLACED_BY_INSTALLER_HERE_server_name;
+
         }
     }
 }
