--- a/server/lib/installer/nginx_template.conf
+++ b/server/lib/installer/nginx_template.conf
@@ -33,8 +33,11 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
-    gzip off;
+    gzip on;
     gzip_disable "msie6";
+    gzip_http_version 1.1;
+    gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+
 
     ##
     # Logging Settings
