--- a/client/js/package.json
+++ b/client/js/package.json
@@ -6,6 +6,8 @@
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-concat": "~1.0.1",
     "grunt-contrib-cssmin": "~1.0.2",
-    "grunt-contrib-uglify": "~2.0.0"
+    "grunt-contrib-uglify": "~2.0.0",
+    "grunt-html-build": "^0.6.1",
+    "grunt-processhtml": "^0.4.1"
   }
 }
